<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jamilaappinc.grubmate.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="163dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Advanced Search"
            android:textSize="20dp"
            android:textAlignment="center"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp">


            <EditText
                android:id="@+id/search_titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Search for Post Title *"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/search_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Category(s)*"
                    android:onClick="clickCategories"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_tagsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:inputType="textMultiLine"
                android:hint="Search Tag(s) * (separate tags with commas) " />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/search_startDateButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:onClick="selectStartDate"
                        android:text="Start Date: * " />

                    <Button
                        android:id="@+id/search_startTimeButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:onClick="selectStartTime"
                        android:text="Start Time: *" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/search_endDateButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:onClick="selectEndDate"
                        android:text="End Date: *" />

                    <Button
                        android:id="@+id/search_endTimeButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:onClick="selectEndTime"
                        android:text="End Time: *" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/search_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Search" />

                <Button
                    android:id="@+id/search_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Cancel" />




            </LinearLayout>


        </LinearLayout>



    </LinearLayout>
        </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/menu_from_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/gmlogo"
        android:layout_weight="0.35"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />
    </RelativeLayout>
</FrameLayout>
