...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<EditText-->
                        <!--android:id="@+id/dietaryText"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:ems="10"-->
                        <!--android:hint="Dietary Restrictions (optional)" />-->
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ServingsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Serving Size *"
                        android:inputType="number" />

...
