<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Menu"
            android:textAlignment="center"
            android:textSize="36dp"
            android:layout_marginBottom="10dp"/>




        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="0dp"
            android:text="Home"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="Search"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="My Profile"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="Create Post"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/createSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text=" Create Subscription"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />




               <TextView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text=" My Notifications"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/myPosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="My Posts"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />




        <TextView
            android:id="@+id/groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="My Groups"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/subscriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="My Subscriptions"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="My Transactions"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />



        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:text="Logout"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />

    </LinearLayout>
</FrameLayout>