...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/notifications_list"
            android:layout_marginStart="13dp"
            android:layout_marginTop="23dp"
            android:text="My Notifications"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/notifications_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_below="@+id/notifications_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/menu_from_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
...
